[gd_scene load_steps=11 format=3 uid="uid://m4r8kknbbaah"]

[ext_resource type="Texture2D" uid="uid://bsrs4ja2fqw8u" path="res://assets/Enemies/Jelly/Enemy2_attack_1.png" id="1_0fxoj"]
[ext_resource type="Script" uid="uid://due5seqmd6r68" path="res://entities/jellyfish.gd" id="1_27g2w"]
[ext_resource type="Texture2D" uid="uid://boqk0ldxc3lei" path="res://assets/Enemies/Jelly/Enemy2_attack_2.png" id="2_27g2w"]
[ext_resource type="Texture2D" uid="uid://cacybjbr22slu" path="res://assets/Enemies/Jelly/Enemy2_attack_3.png" id="3_0shri"]
[ext_resource type="Texture2D" uid="uid://bgwd7qp60ptef" path="res://assets/Enemies/Jelly/Enemy2_attack_4.png" id="4_sp7tr"]
[ext_resource type="Texture2D" uid="uid://b37avshnj1dc" path="res://assets/Enemies/Jelly/Enemy2_attack_5.png" id="5_7fjws"]
[ext_resource type="Texture2D" uid="uid://c7n88qurq8dw4" path="res://assets/Enemies/Jelly/Enemy2_idle_1.png" id="6_0nwda"]
[ext_resource type="Texture2D" uid="uid://b1aij2fpdedfd" path="res://assets/Enemies/Jelly/Enemy2_idle_2.png" id="7_opm5d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8d0nc"]
animations = [{
"frames": [{
"duration": 1.51,
"texture": ExtResource("1_0fxoj")
}, {
"duration": 1.0,
"texture": ExtResource("2_27g2w")
}, {
"duration": 1.0,
"texture": ExtResource("3_0shri")
}, {
"duration": 1.0,
"texture": ExtResource("4_sp7tr")
}, {
"duration": 1.0,
"texture": ExtResource("5_7fjws")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.21,
"texture": ExtResource("6_0nwda")
}, {
"duration": 1.21,
"texture": ExtResource("7_opm5d")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0fxoj"]
radius = 20.0

[node name="Jellyfish" type="CharacterBody2D"]
z_index = 6
collision_layer = 4
collision_mask = 0
script = ExtResource("1_27g2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7109375, 0.7109375)
sprite_frames = SubResource("SpriteFrames_8d0nc")
animation = &"attack"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_0fxoj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_0fxoj")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
